[tool.poetry]
name = "aws-metrics"
version = "0.1.0"
description = ""
authors = ["Sumanth <@sumanth>"]
readme = "README.md"
packages = [{include = "aws_metrics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
