[tool.poetry]
name = "aws_metrics"
version = "0.1.0"
description = ""
authors = ["Sumanth <@sumanth>"]
readme = "README.md"
packages = [{include = "aws_metrics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.63"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
